<resources>
    <string name="app_name">SQLite3</string>
    <string name="faculty">Факультет:</string>
    <string name="group">Группа:</string>
    <string name="subject">Предмет:</string>
    <string name="tvActionTitle">Список группы со средней оценкой для:</string>
    <string name="tvBestGroupTitle">Список наилучших студентов для всех групп факультета:</string>
    <string name="tvBadStudentTitle">Список студентов, получивших оценки ниже 4, для всех групп факультета</string>
    <string name="tvAnalysisTitle">Сравнительный анализ по группам</string>
    <string name="tvCompareFacultyTitle">Сравнение по факультетам</string>
    <string name="btnShow">Показать</string>
    <string name="periodFrom">С:</string>
    <string name="periodTo">По:</string>
    <string name="dateHint">dd.mm.yyyy</string>
    <string-array name="actionsList">
        <item>каждого студента по предмету</item>
        <item>студента в целом</item>
        <item>группы в целом</item>
    </string-array>
    <string-array name="actionsListAnalysis">
        <item>в целом</item>
        <item>по предмету</item>
    </string-array>
    <string-array name="periodList">
        <item>за предыдущую неделю</item>
        <item>за предыдущую месяц</item>
        <item>за предыдущую квартал</item>
        <item>за предыдущую год</item>
    </string-array>
    <string name="title_activity_show_list_groups">ShowListGroups</string>

</resources>
