<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ped.bstu.by.sqlite3.Activities.ActivityShowListGroup">

    <GridLayout
        style="@style/MatchParent"
        android:rowCount="3"
        android:columnCount="2">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/faculty"
            style="@style/tvStyle" />

        <Spinner
            android:id="@+id/ShowActSpinnerFaculty"
            android:layout_row="0"
            android:layout_column="1"
            style="@style/spinner"
            android:layout_width="250dp" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/group"
            style="@style/tvStyle" />

        <Spinner
            android:id="@+id/ShowActSpinnerGroup"
            android:layout_row="1"
            android:layout_column="1"
            style="@style/spinner"
            android:layout_width="250dp" />

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/subject"
            style="@style/tvStyle" />

        <Spinner
            android:id="@+id/ShowActSpinnerSubject"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/spinner"
            android:layout_width="250dp" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
